--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -31,9 +31,10 @@
 </address>
 
 <form class="contact-form" method="post" action="https://formspree.io/{{site.data.settings.client.email}}">
-  <input type="text" name="name" placeholder="Name" required>
-  <input type="email" name="_replyto" placeholder="Email" required>
-  <textarea name="Message" placeholder="Message"></textarea>
+  <input type="text" name="name" placeholder="*Name" required>
+  <input type="email" name="_replyto" placeholder="*Email" required>
+  <input type="text" name="phone" placeholder="*Phone Number" required>
+  <textarea name="Message" placeholder="Optional Message"></textarea>
   <!-- Cloud cannon settings field -->
   <div class="hidden">
     <input type="hidden" name="_to" value="{{site.data.settings.client.email}}">
