--- a/_includes/eval-form.html
+++ b/_includes/eval-form.html
@@ -1,144 +1,63 @@
+<p>Thank you for placing your title and escrow order with Derek and Stewart Title Company!<br>Please fill out the below form to expedite your request</p>
 <form method="post" class="home-value cta-forms" action="https://formspree.io/{{site.data.settings.client.email}}" onsubmit="return setReturn()">
     <fieldset>
         <p id="thanks"></p>
         <!--1-->
-        <label for="type">What type of property are you selling?</label>
+        <label for="name">What is your name?<span class="asterisk">*</span>
+        </label>
+        <input type="text" name="name" required>
+        <!--2-->
+        <label for="email">What is your email address?<span class="asterisk">*</span>
+        </label>
+        <input type="email" name="_replyto" required>
+        <!--3-->
+        <label for="address">What is the property address?<span class="asterisk">*</span>
+        </label>
+        <label for="name">What is the property owner’s name?<span class="asterisk">*</span>
+        </label>
+        <input type="text" name="name" required>
+        <!--4-->
+        <label for="type">What service are you requesting?</label>
         <select name="type">
             <option value="-Select-" selected="selected">
                 -Select-
             </option>
-            <option value="Single-Family Home">
-                Single-Family Home
+            <option value="Preliminary Title Report including Trio/Property info Trio/property info only">
+                Preliminary Title Report including Trio/Property info Trio/property info only
             </option>
-            <option value="Condo">
-                Condo
-            </option>
-            <option value="Villa/Townhouse">
-                Villa/Townhouse
-            </option>
-            <option value="Rentals">
-                Rentals
-            </option>
-            <option value="Manufactured">
-                Manufactured
-            </option>
-            <option value="Land/Lots">
-                Land/Lots
+            <option value="Includes plat map, last deed of record, property profile and tax information">
+                Includes plat map, last deed of record, property profile and tax information
             </option>
         </select>
-        <!--2-->
-        <label for="footage">
-            What is the square footage?
-        </label>
-        <input type="text" name="footage" />
-        <!--3-->
-        <label for="bathrooms">Number of bathrooms</label>
-        <select name="bathrooms">
-            <option value="-Select-" selected="selected">
-                -Select-
-            </option>
-            <option value="1">
-                1
-            </option>
-            <option value="2">
-                2
-            </option>
-            <option value="3">
-                3
-            </option>
-            <option value="4">
-                4
-            </option>
-            <option value="5">
-                5
-            </option>
-            <option value="6">
-                6
-            </option>
-            <option value="7+">
-                7+
-            </option>
-        </select>
-        <!--4-->
-        <label for="bedrooms">Number of bedrooms</label>
-        <select name="bedrooms">
-            <option value="-Select-" selected="selected">
-                -Select-
-            </option>
-            <option value="1">
-                1
-            </option>
-            <option value="2">
-                2
-            </option>
-            <option value="3">
-                3
-            </option>
-            <option value="4">
-                4
-            </option>
-            <option value="5">
-                5
-            </option>
-            <option value="6">
-                6
-            </option>
-            <option value="7+">
-                7+
-            </option>
-        </select>
-    </fieldset>
-    <fieldset>
         <!--5-->
-        <label for="comments">
-            Any important features or comments?
-        </label>
-        <textarea name="comments"></textarea>
-    </fieldset>
-    <fieldset>
-        <!--5-->
-        <label for="when">
-            When are you looking to move?
-        </label>
-        <select name="when">
-            <option value="Undetermined" selected="selected">
-                Undetermined
-            </option>
-            <option value="Less than one month">
-                Less than one month
-            </option>
-            <option value="1-3 months">
-                1-3 months
-            </option>
-            <option value="3-6 months">
-                3-6 months
-            </option>
-            <option value="6 months+">
-                6 months+
-            </option>
-        </select>
-        <!--7-->
         <label for="range">
-            What is your desired asking price?
+            Is there anything specific you’d like us to know regarding this property?
         </label>
         <input name="range">
-        <!--8-->
-        <label for="name">Name<span class="asterisk">*</span>
+        <!--6-->
+        <label for="type">Is there anything else we can provide?</label>
+        <select name="type">
+            <option value="-Select-" selected="selected">
+                -Select-
+            </option>
+            <option value="Farm of 100 closest properties and predictive models of those most likely to sell - $2">
+                Farm of 100 closest properties and predictive models of those most likely to sell - $2
+            </option>
+            <option value="Custom farm (Derek will contact you for details!)">
+                Custom farm (Derek will contact you for details!)
+            </option>
+            <option value="Comparable Sales Report - $1.05">
+                Comparable Sales Report - $1.05
+            </option>            
+            <option value="Homebook - $14.30">
+                Homebook - $14.30
+            </option>
+        </select>        
+        <!--7-->
+        <label for="range">
+            Have a question or need something not listed here?
         </label>
-        <input type="text" name="name" required>
-
-        <!--9-->
-        <label for="email">Email<span class="asterisk">*</span>
-        </label>
-        <input type="email" name="_replyto" required>
-        <!--10-->
-        <label for="phone">Number
-        </label>
-        <input type="tel" name="phone">
-        <!--11-->
-        <label for="address">Address
-        </label>
-        <input type="text" name="address">
+        <input name="range">
         <!-- submit! -->
         <input class="submit light-light" type="submit" value="Submit" name="submitSellerForm">
         <span class="asterisk">*</span>required
