--- a/_includes/homesearch.html
+++ b/_includes/homesearch.html
@@ -23,13 +23,12 @@
         <label for="type">Check this box if</label>
         <input type="checkbox" name="you’d like to know which homes near this property are most likely to list next!" value="you’d like to know which homes near this property are most likely to list next!">you’d like to know which homes near this property are most likely to list next!<br>
         </label>
-        <!--6-->
-        <label for="range">
-            Need help with a special project?<br>Your success is my passion! I work hard with my clients to improve their business with effective Title and Escrow based strategies. Let’s get together!<br>**Contact for a Free Consultation**
-        </label>
-        <input name="range">
         <!--7-->
-    </fieldset>
+        <input name="range">
+        <!-- submit! -->
+        <input class="submit light-light" type="submit" value="Submit" name="submitSellerForm">
+        <span class="asterisk">*</span>required
+    </fieldset>    
     <!-- Cloud cannon settings field -->
     <div class="hidden">
       <input type="hidden" name="_to" value="{{site.data.settings.client.email}}">
