--- a/_includes/homesearch.html
+++ b/_includes/homesearch.html
@@ -20,11 +20,10 @@
         </label>
         <input type="text" name="name" required>
         <!--5-->
-        <label for="type">Check this box if</label>
-        <input type="checkbox" name="you’d like to know which homes near this property are most likely to list next!" value="you’d like to know which homes near this property are most likely to list next!">you’d like to know which homes near this property are most likely to list next!<br>
+        <label for="type">Check this box if you’d like to know which homes near this property are most likely to list next!</label>
+        <input type="checkbox" name="thanks!" value="thanks!">thanks!<br>
         </label>
         <!--7-->
-        <input name="range">
         <!-- submit! -->
         <input class="submit light-light" type="submit" value="Submit" name="submitSellerForm">
         <span class="asterisk">*</span>required
