Updated '_includes/homesearch.html' via CloudCannon

--- a/_includes/homesearch.html
+++ b/_includes/homesearch.html
@@ -20,7 +20,7 @@
         </label>
         <input type="text" name="name" required>
         <!--5-->
-        <label for="type">Check this box if you’d like to know which homes near this property are most likely to list next!</label>
+        <label for="type">Check this box if you’d like to know which homes near<br>this property are most likely to list next!</label>
         <input type="checkbox" name="thanks!" value="thanks!">thanks!<br>
         </label>
         <!--7-->
