Updated '_includes/eval-form.html' via CloudCannon

--- a/_includes/eval-form.html
+++ b/_includes/eval-form.html
@@ -39,23 +39,10 @@
         <input name="range">
         <!--7-->
         <label for="type">Is there anything else we can provide?</label>
-        <select name="type">
-            <option value="-Select-" selected="selected">
-                -Select-
-            </option>
-            <option value="Farm of 100 closest properties and predictive models of those most likely to sell - $2">
-                Farm of 100 closest properties and predictive models of those most likely to sell - $2
-            </option>
-            <option value="Custom farm (Derek will contact you for details!)">
-                Custom farm (Derek will contact you for details!)
-            </option>
-            <option value="Comparable Sales Report - $1.05">
-                Comparable Sales Report - $1.05
-            </option>            
-            <option value="Homebook - $14.30">
-                Homebook - $14.30
-            </option>
-        </select>        
+        <input type="checkbox" name="farm" value="farm">Farm of 100 closest properties and predictive models of those most likely to sell - $2<br>
+        <input type="checkbox" name="custom" value="custom">Custom farm (Derek will contact you for details!)<br>
+        <input type="checkbox" name="comparable" value="comparable">Comparable Sales Report - $1.05<br>
+        <input type="checkbox" name="homebook" value="homebook">Homebook - $14.30<br>          
         <!--8-->
         <label for="range">
             Have a question or need something not listed here?
