Updated '_includes/eval-form.html' via CloudCannon

--- a/_includes/eval-form.html
+++ b/_includes/eval-form.html
@@ -1,6 +1,6 @@
 <br>
 <p>Thank you for placing your title and escrow order with Derek and Stewart Title Company!<br>Please fill out the below form to expedite your request</p>
-<form method="post" class="home-value cta-forms" action="https://formspree.io/{{site.data.settings.client.email}}" onsubmit="return setReturn()">
+<form method="post" class="home-value cta-forms" action="https://formspree.io/derek.lockett@stewart.com, openhere@stewart.com, cs@stewart.com" onsubmit="return setReturn()">
     <fieldset>
         <p id="thanks"></p>
         <!--1-->
