Updated '_includes/homesearch.html' via CloudCannon

--- a/_includes/homesearch.html
+++ b/_includes/homesearch.html
@@ -1,6 +1,6 @@
 <br>
 <p>Just need some quick property info? No problem! Fill out the form below and we’ll send you a Trio which will include a plat map, last deed of record, and a property profile including tax information</p>
-<form method="post" class="home-value cta-forms" action="https://formspree.io/{{site.data.settings.client.email}}" onsubmit="return setReturn()">
+<form method="post" class="home-value cta-forms" action="https://formspree.io/derek.lockett@stewart.com,cs@stewart.com" onsubmit="return setReturn()">
     <fieldset>
         <p id="thanks"></p>
         <!--1-->
