Updated '_includes/eval-form.html' via CloudCannon

--- a/_includes/eval-form.html
+++ b/_includes/eval-form.html
@@ -25,8 +25,11 @@
             <option value="-Select-" selected="selected">
                 -Select-
             </option>
-            <option value="Preliminary Title Report including Trio/Property info Trio/property info only">
-                Preliminary Title Report including Trio/Property info Trio/property info only
+            <option value="Preliminary Title Report including Trio/Property info">
+                Preliminary Title Report including Trio/Property info
+            </option>
+            <option value="Trio/property info only">
+                Trio/property info only
             </option>
             <option value="Includes plat map, last deed of record, property profile and tax information">
                 Includes plat map, last deed of record, property profile and tax information
