Updated '_includes/eval-form.html' via CloudCannon

--- a/_includes/eval-form.html
+++ b/_includes/eval-form.html
@@ -28,11 +28,8 @@
             <option value="Preliminary Title Report including Trio/Property info">
                 Preliminary Title Report including Trio/Property info
             </option>
-            <option value="Trio/property info only">
-                Trio/property info only
-            </option>
-            <option value="Includes plat map, last deed of record, property profile and tax information">
-                Includes plat map, last deed of record, property profile and tax information
+            <option value="Trio/property info including plat map, last deed of record, property profile and tax information">
+                Trio/property info including plat map, last deed of record, property profile and tax information
             </option>
         </select>
         <!--6-->
