Updated '_includes/eval-form.html' via CloudCannon

--- a/_includes/eval-form.html
+++ b/_includes/eval-form.html
@@ -40,6 +40,7 @@
         <!--7-->
         <label for="type">Is there anything else we can provide?</label>
         <input type="checkbox" name="farm" value="farm">Farm of 100 closest properties and predictive models of those most likely to sell - $2<br>
+        <input class="move-left" type="checkbox" id="field3">Farm of 100 closest properties and predictive models of those most likely to sell - $2<br>
         <input type="checkbox" name="custom" value="custom">Custom farm (Derek will contact you for details!)<br>
         <input type="checkbox" name="comparable" value="comparable">Comparable Sales Report - $1.05<br>
         <input type="checkbox" name="homebook" value="homebook">Homebook - $14.30<br>          
