--- a/_sass/_forms.sass
+++ b/_sass/_forms.sass
@@ -24,6 +24,9 @@ form
 		border: 3px solid $brand
 		&:hover
 			border: 3px solid $brand-light
+			
+.move-left
+	width: auto
 
 .contact-form
 	width: 75%
